# fib-wasm-demo

./: .gitignore  Cargo.toml  fib.js  index.html  package.json  server.js
js/: decl.js  main.deprecated.js  main.js
src/: lib.rs
